# libgtfs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  doxyfile
docs/theming/: header.html
include/gtfs/: gtfs.h
include/gtfs/datasets/: agency.h
include/gtfs/utils/: datasets.h  results.h  types.h
src/: gtfs.cpp
src/datasets/: agency.cpp
src/utils/: results.cpp  types.cpp
tests/: test.cpp
